# neoclock

./: .gitignore  Cargo.toml  DejaVuSansMono.LICENSE  README.md  build.rs  config-test.json  linker
.cargo/: config
renderer/: Cargo.toml
renderer/src/: lib.rs  screen.rs
renderer/src/movers/: mod.rs  scroll.rs  wigwag.rs
renderer/src/widgets/: calendar_widget.rs  clock_widget.rs  flyer_widget.rs  font.rs  gif_widget.rs  matrix_rain_widget.rs  message.rs  mod.rs  solid_widget.rs  wigwag_widget.rs
src/: config.rs  led_matrix.rs  main.rs  simulator.rs
