[package]
name = "neoclock"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"

[workspace]
members = ["renderer"]

[profile.production]
inherits = "release"
lto = true

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["default", "serde_derive"] }
serde_json = "1"
clap = "2"
structopt = "0.3"
rumqttc = "0.10"
rpi-led-matrix = "0.4"
#rpi-led-matrix = { git = "https://github.com/windoze/rust-rpi-rgb-led-matrix.git", branch = "static-link" }
renderer = { path = "renderer" }
